# subscript-html

./: .gitignore  Cargo.toml  README.md
assets/: deps.html
composer/: index.html  tsconfig.json  webpack.config.js
composer/css/: base.css  main.css  page-elements.css
composer/src/: index.ts  page.ts
docs/: index.html  other.html  sample.html
docs/other/: blue.html  green.html  red.html
docs/sample/: chapter1.html  chapter2.html  chapter3.html
docs/ss-data/: 3069423618957184749
editors/vscode-subscript-format/syntaxes/: injection-html.json
examples/school-notes/: subscript.toml
examples/school-notes/pages/: index.html  sample.html
examples/school-notes/pages/sample/: red.html
examples/school-notes/plugins/: desmos.ts  desmos1.rhai  test-plugin.rhai
examples/school-notes/styles/: base.scss  macros.scss  main.scss  nav.scss
examples/school-notes/template/: base.html
examples/school-notes/template/css/: macros.css  main.css
examples/school-notes/template/styles/: base.scss  index.scss
notebook/: babel.config.js  index.html  package.json
notebook-ps/: index.html  index.js  package-lock.json  package.json  spago.dhall
notebook-ps/scripts/: open.sh  watch.sh
notebook-ps/src/: App.purs  Css.purs  Main.purs  View.purs  foreign.js
notebook/css/: base.css  page-elements.css
notebook/src/: calc.ts  curve-to-bezier.ts  index.ts
scripts/: build-notes.sh  install.sh  release-notes.sh  release.sh  run.sh  serve.sh
src/: data.rs  frontend.rs  macros.rs  main.rs
src/data/: css.rs  utils.rs
src/embed/: rhai.rs
src/parser/: html.rs
src/server/: mod.rs
