[package]
name = "subscript"
version = "0.3.0"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"
repository = "https://github.com/subscript-publishing/subscript"
homepage = "https://github.com/subscript-publishing/subscript"
license = "MPL-2.0"
description = "Content Publishing using Web Technologies"
keywords = ['site', 'blog', 'static', 'generator', 'compiler', 'html', 'bundler']

[dependencies]
html5ever = "0.25.1"
markup5ever = "0.10.0"
markup5ever_rcdom = "0.1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
lazy_static = "1.0.0"
structopt = { version = "0.3"}
glob = "0.3.0"
rand = "0.7.3"
hotwatch = "0.4.5"
rayon = "1.5.0"
toml = "0.5"
rhai = {version = "0.19.7", features = ["serde", "unchecked"]}
harsh = "0.2.1"
